--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vimfiles/colors"]
 	path = vimfiles/colors
 	url = https://nobuhiko@github.com/nobuhiko/ap_dark8.git
+[submodule "vimfiles/bundle/syntastic"]
+	path = vimfiles/bundle/syntastic
+	url = https://github.com/scrooloose/syntastic.git
