--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vimfiles/bundle/vim-quickrun"]
 	path = vimfiles/bundle/vim-quickrun
 	url = https://github.com/thinca/vim-quickrun.git
+[submodule "vimfiles/bundle/vim-fugitive"]
+	path = vimfiles/bundle/vim-fugitive
+	url = git://github.com/tpope/vim-fugitive.git
