--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
 [submodule "vimfiles/colors"]
 	path = vimfiles/colors
 	url = https://nobuhiko@github.com/nobuhiko/ap_dark8.git
-[submodule "vimfiles/bundle/syntastic"]
-	path = vimfiles/bundle/syntastic
-	url = https://github.com/scrooloose/syntastic.git
 [submodule "vimfiles/bundle/vim-sudo"]
 	path = vimfiles/bundle/vim-sudo
 	url = git://github.com/vim-scripts/sudo.vim.git
@@ -13,3 +10,9 @@
 [submodule "vimfiles/bundle/vim-fugitive"]
 	path = vimfiles/bundle/vim-fugitive
 	url = git://github.com/tpope/vim-fugitive.git
+[submodule "oh-my-zsh"]
+	path = oh-my-zsh
+	url = git://github.com/robbyrussell/oh-my-zsh.git
+[submodule "vimfiles/bundle/syntastic"]
+	path = vimfiles/bundle/syntastic
+	url = https://github.com/scrooloose/syntastic.git
