vim-mru add git submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "vimfiles/bundle/syntastic"]
 	path = vimfiles/bundle/syntastic
 	url = https://github.com/scrooloose/syntastic.git
+[submodule "vimfiles/bundle/vim-mru"]
+	path = vimfiles/bundle/vim-mru
+	url = https://github.com/vim-scripts/mru.vim.git
