--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "vimfiles/bundle/vim-neocomplcache"]
 	path = vimfiles/bundle/vim-neocomplcache
 	url = https://github.com/Shougo/neocomplete.vim
+[submodule "vimfiles/bundle/vim-neocomplete"]
+	path = vimfiles/bundle/vim-neocomplete
+	url = https://github.com/Shougo/neocomplete.vim
