--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "vimfiles/bundle/syntastic"]
 	path = vimfiles/bundle/syntastic
 	url = https://github.com/scrooloose/syntastic.git
+[submodule "vimfiles/indent"]
+	path = vimfiles/indent
+	url = https://github.com/vim-scripts/PHP-correct-Indenting.git
