--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "vimfiles/bundle/syntastic"]
 	path = vimfiles/bundle/syntastic
 	url = https://github.com/scrooloose/syntastic.git
+[submodule "vimfiles/bundle/vim-ctrlp"]
+	path = vimfiles/bundle/vim-ctrlp
+	url = https://github.com/kien/ctrlp.vim
