--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "vimfiles/bundle/vim-ctrlp"]
 	path = vimfiles/bundle/vim-ctrlp
 	url = https://github.com/kien/ctrlp.vim
+[submodule "vimfiles/bundle/wildfire.vim"]
+	path = vimfiles/bundle/wildfire.vim
+	url = git@github.com:gcmt/wildfire.vim.git
